# lambda-calculus-interpreter

./: dune-project  expressions.txt  interpreter.opam
lib/: ast.ml  dune  encode.ml  eval.ml  lexer.mll  parse.ml  parser.mly
